--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gestion-carga-api
 
 spring.datasource.url = jdbc:mysql://localhost:3306/gestioncargadb
 
-spring.datasource.username = root
+spring.datasource.username = icmdb
 spring.datasource.password = dakar*2024
 spring.jpa.hibernate.ddl-auto = update
 
