--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gestion-carga-api
 
-spring.datasource.url = jdbc:mysql://localhost:3306/gestioncargadbgit
+spring.datasource.url = jdbc:mysql://localhost:3306/gestioncargadb
 
 spring.datasource.username = icmdb
 spring.datasource.password = dakar*2024
