--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=gestion-carga-api
 
-spring.datasource.url = jdbc:mysql://192.168.0.204:3306/gestioncargadb
+#spring.datasource.url = jdbc:mysql://192.168.0.204:3306/gestioncargadb
+spring.datasource.url = jdbc:mysql://samloto.com:3306/gestioncargadb
 # Database credentials
 spring.datasource.username = icmdb
 spring.datasource.password = dakar*2024
